[gd_scene load_steps=11 format=3 uid="uid://dvo24mmacr7xq"]

[ext_resource type="Script" uid="uid://yp7mmox36all" path="res://scripts/player_ui.gd" id="1_jkj6h"]

[sub_resource type="Gradient" id="Gradient_jkj6h"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sk4pr"]
gradient = SubResource("Gradient_jkj6h")
fill_from = Vector2(1, 0)

[sub_resource type="Gradient" id="Gradient_48xfa"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8isll"]
gradient = SubResource("Gradient_48xfa")
fill_to = Vector2(0.00990099, 0)

[sub_resource type="Gradient" id="Gradient_sk4pr"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.83479756, 0, 0.060979962, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_48xfa"]
gradient = SubResource("Gradient_sk4pr")
width = 360
height = 40

[sub_resource type="Gradient" id="Gradient_8isll"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(2.4065375e-06, 0.94009596, 0.23281023, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7ctsh"]
gradient = SubResource("Gradient_8isll")
width = 360
height = 40

[sub_resource type="LabelSettings" id="LabelSettings_jkj6h"]
font_size = 42

[node name="playerUI" type="CanvasLayer"]
script = ExtResource("1_jkj6h")

[node name="FireRateUI" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.09900001
offset_right = -24.512001
offset_bottom = -24.152008
max_value = 1.0
step = 0.0
value = 0.25
texture_under = SubResource("GradientTexture2D_sk4pr")
texture_progress = SubResource("GradientTexture2D_8isll")

[node name="HealthBarUI" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.68700004
anchor_top = 0.938
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.57592773
offset_top = 0.17596436
grow_horizontal = 2
grow_vertical = 2
value = 100.0
texture_under = SubResource("GradientTexture2D_48xfa")
texture_progress = SubResource("GradientTexture2D_7ctsh")

[node name="EnemyCount" type="Label" parent="."]
anchors_preset = -1
anchor_top = 0.95800006
anchor_right = 0.109000005
anchor_bottom = 1.0
offset_top = 0.21594238
offset_right = -0.5680084
text = "Enemies:"

[node name="WaveNotification" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.437
anchor_top = 0.312
anchor_right = 0.569
anchor_bottom = 0.402
offset_left = -0.42401123
offset_top = -0.17601013
offset_right = -0.4880371
offset_bottom = 0.1289978
text = "WAVE 3"
label_settings = SubResource("LabelSettings_jkj6h")
